# keystroke_tracker

./: .gitignore  Cargo.toml  README.md  design.md  install.sh  phase.md  report.md  run.sh  todo.md
assets/: demo.tape
scripts/: setup-keyboard.sh  setup-mouse.sh
src/: cli.rs  ipc.rs  main.rs  render.rs  zzbus.rs
src/daemon/: mod.rs  tracker.rs  zzbus.rs
