[package]
name = "tracker"
version = "2.1.0"
edition = "2024"
description = "A rust based tracker for keypress, mouse press, mouse miles and screen on time."

[dependencies]
evdev = "0.13.2"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.150"
chrono = "0.4.45"
zbus = "5.17.0"
futures-util = "0.3.32"
futures-macro = "0.3.32"
